sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: value ||! is not a member of Boolean
  while(ecart>1||!end){
               ^